# rtfm_workshop

./: Cargo.toml  README.md  jlink.gdb  openocd.gdb  openocd_jlink.cfg
.cargo/: config
cortex-m-semihosting/: Cargo.toml
cortex-m-semihosting/src/: hio.rs  lib.rs
examples/: app1.rs  app2.rs  app3.rs  app4.rs  app5.rs  app6.rs  app7.rs  app8.rs  app9.rs  dead_pool_design.md  memerror.rs  minimal.rs  pool.rs  write.rs
nrf52-hal/nrf52-hal-common/: Cargo.toml
nrf52-hal/nrf52-hal-common/src/: clocks.rs  gpio.rs  lib.rs  rng.rs  rtc.rs  saadc.rs  spim.rs  twim.rs  uarte.rs
src/: main.rs
