[package]
authors = ["Per Lindgren <per.lindgren@ltu.se>",
           "Emil Fresk <emil.fresk@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
cortex-m-rt             = "0.6.8"
cortex-m-semihosting    = "0.3.3"
panic-semihosting       = "0.5.1"
cortex-m                = "0.5.8"
embedded-hal            = "0.2.2"

[dependencies.heapless]
version                 = "0.4.3"
features                = ["const-fn"]

[dependencies.dwm1001]
version                 = "0.2.0"
features                = ["dev", "rt"]

[dependencies.cortex-m-rtfm]
version                 = "0.4.3"
features                = [
 #   "nightly",
    "timer-queue"
    ] # disable if not using timed messages

[features]
timer-queue             = ["cortex-m-rtfm/timer-queue"]

# this lets you use `cargo fix`!
[[bin]]
name                    = "app"
test                    = false
bench                   = false

[profile.release]
incremental             = false # disable incremental build to allow lto on nightly
codegen-units           = 1     # better optimizations
debug                   = true  # symbols are nice and they don't increase the size on Flash
lto                     = true  # better optimizations

[patch.crates-io]
nrf52-hal-common        = { path = './nrf52-hal/nrf52-hal-common' }
cortex-m-semihosting    = { path = "./cortex-m-semihosting"}
